# rs-tui-bingo

./: Cargo.toml  bitbucket-pipelines.yml
data/: bingo_data.json
src/: main.rs
