[package]
name = "tui-bingo"
version = "0.0.1"
authors = ["Sothus <krzysztof.plucinski95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm']}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
